<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="add">Add</string>
    <string name="add_policy">Add Policy</string>
    <string name="add_record">Add Record</string>
    <string name="alias_base_record_header">ALIAS</string>
    <string name="alias_base_record_label">Alias</string>
    <string name="app_desc">Access PasswordSafe databases on Android</string>
    <string name="app_name">PasswdSafe</string>
    <string name="at_least">At least</string>
    <string name="basic">Basic</string>
    <string name="cannot_create_file">Cannot create file: %1$s</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="case_sensitive_sorting">Case-sensitive sorting</string>
    <string name="change_password">Change Password</string>
    <string name="check_box_to_confirm">Check box to confirm</string>
    <string name="choose">Choose</string>
    <string name="choose_group">Choose Group</string>
    <string name="choose_record">Choose Record</string>
    <string name="choose_type">Choose Type</string>
    <string name="clear">Clear</string>
    <string name="clear_clipboard_on_close">Clear clipboard on close</string>
    <string name="clear_password_notifications">Clear password notifications</string>
    <string name="close_file_screen_off">Close file on screen off</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_label">Confirm:</string>
    <string name="confirm_password_label">Confirm Password:</string>
    <string name="cannot_delete_record">Cannot delete record - %1$s</string>
    <string name="content_file">Content File</string>
    <string name="copy_clipboard">Copy to Clipboard</string>
    <string name="copy_notes">Copy Notes</string>
    <string name="copy_password">Copy Password</string>
    <string name="copy_user">Copy User Name</string>
    <string name="created">Created</string>
    <string name="current">Current</string>
    <string name="custom_symbols">Custom Symbols</string>
    <string name="custom_symbol_not_alphanum">Custom symbols must not be alphanumeric or whitespace</string>
    <string name="database_policy">Database Policy - %s</string>
    <string name="database_version_label">Database version:</string>
    <string name="days">Days</string>
    <string name="default_file_to_open">Default file to open</string>
    <string name="default_policy">Default Policy</string>
    <string name="default_symbols">Default symbols</string>
    <string name="delete">Delete</string>
    <string name="delete_file">Delete File</string>
    <string name="delete_file_msg">Delete file \"%1$s\"?</string>
    <string name="delete_file_title">Confirm File Deletion</string>
    <string name="delete_policy">Delete Policy</string>
    <string name="delete_policy_msg">Delete policy \"%1$s\"?</string>
    <string name="delete_policy_title">Confirm Policy Deletion</string>
    <string name="delete_record_msg">Delete record \"%1$s\"?</string>
    <string name="delete_record_title">Confirm Record Deletion</string>
    <string name="details">Details</string>
    <string name="directory_for_files">Directory for files</string>
    <string name="done">Done</string>
    <string name="duplicate_entry">Duplicate entry</string>
    <string name="duplicate_name">Duplicate name</string>
    <string name="edit">Edit</string>
    <string name="edit_item">Edit %s</string>
    <string name="edit_policy">Edit Policy</string>
    <string name="email">Email</string>
    <string name="email_attachment">Email Attachment</string>
    <string name="email_header">EMAIL</string>
    <string name="empty_custom_symbols">Empty custom symbols</string>
    <string name="empty_file_name">Empty file name</string>
    <string name="empty_name">Empty name</string>
    <string name="empty_password">Empty password</string>
    <string name="empty_title">Empty title</string>
    <string name="enabled">Enabled</string>
    <string name="enter_net_group">Enter new group:</string>
    <string name="erase_all_expiration_notifications">Erase all password expiration notifications and tracked files</string>
    <string name="error_msg">&lt;i&gt;%1$s&lt;/i&gt;</string>
    <string name="expiration">Expiration</string>
    <string name="expiration_notifications">Expiration Notifications</string>
    <string name="expiration_notifications_warning">Enabling expiration notifications requires PasswdSafe to store expiration information for the file (record title, group, and expiration date).  This information is stored unencrypted on the device.  No passwords are stored.</string>
    <string name="expired_passwords">Expired Passwords</string>
    <string name="expired_password_notification">Expired password notification</string>
    <string name="expiring_password">Expiring password</string>
    <string name="ext_storage_not_mounted">External storage not mounted.  Please mount the storage to view files.</string>
    <string name="file_backups">File backups</string>
    <string name="file_close_timeout">File close timeout</string>
    <string name="file_exists">File exists</string>
    <string name="file_label">File:</string>
    <string name="file_label_val">File: %1$s</string>
    <string name="file_name_label">File Name:</string>
    <string name="file_operations">File Operations…</string>
    <string name="file_password_encoding">File password encoding</string>
    <string name="file_settings">File Settings</string>
    <string name="file_type_icon">File type icon</string>
    <string name="font_size">Font size</string>
    <string name="generate">Generate</string>
    <string name="generate_password">Generate Password</string>
    <string name="go">Go</string>
    <string name="go_to">Goto</string>
    <string name="group">Group</string>
    <string name="group_header">GROUP</string>
    <string name="group_records">Group records</string>
    <string name="help">Help</string>
    <string name="hidden_password_alias">***** (from alias, tap to show)</string>
    <string name="hidden_password_normal">***** (tap to show)</string>
    <string name="hidden_password_shortcut">***** (from shortcut, tap to show)</string>
    <string name="hide_password">Hide Password</string>
    <string name="hide_passwords">Hide Passwords</string>
    <string name="history">History</string>
    <string name="history_header">HISTORY</string>
    <string name="home">Home</string>
    <string name="interval">Interval</string>
    <string name="invalid_file_name">Invalid file name</string>
    <string name="invalid_history_max_size">Invalid history maximum size</string>
    <string name="invalid_length">Invalid length</string>
    <string name="invalid_option_length">Invalid option length</string>
    <string name="invalid_password">Invalid password</string>
    <string name="kitkat_sdcard_warning">
        %1$s
        \n\nOn Android KitKat and higher, apps are prevented from writing to 
        removable SD cards.  If the file is located on a card, it will have to
        be moved to the internal storage.
    </string>
    <string name="last_save_app_label">Last saved app:</string>
    <string name="last_save_by_label">Last saved by:</string>
    <string name="last_save_time_label">Last save time:</string>
    <string name="legacy_file_chooser">Legacy file chooser</string>
    <string name="legacy_file_chooser_summary">Usable with Kitkat and higher</string>
    <string name="length">Length</string>
    <string name="length_even_hex">Length must be even for hexadecimal</string>
    <string name="length_min_val">Length must be at least %1$d</string>
    <string name="length_max_val">Length must be at most %1$d</string>
    <string name="loading_file">Loading %s…</string>
    <string name="location">Location</string>
    <string name="max_size_label">Maximum size:</string>
    <string name="modified">Modified</string>
    <string name="n_a">N/A</string>
    <string name="name">Name</string>
    <string name="new_box_file">New Box File</string>
    <string name="new_entry">New Entry</string>
    <string name="new_file">New File</string>
    <string name="new_dropbox_file">New Dropbox File</string>
    <string name="new_file_not_supp_uri">New file not supported for URI %1$s</string>
    <string name="new_group_menu">New group…</string>
    <string name="new_local_file">New Local File</string>
    <string name="new_owncloud_file">New ownCloud File</string>
    <string name="new_password_label">New Password:</string>
    <string name="new_policy">New Policy</string>
    <string name="next">Next</string>
    <string name="no_alias_chosen">No alias chosen</string>
    <string name="no_shortcut_chosen">No shortcut chosen</string>
    <string name="no_policies">No Policies</string>
    <string name="no_records">No Records</string>
    <string name="no_records_open_file">No Records. Open a file first and then retry.</string>
    <string name="none_paren">(None)</string>
    <string name="none_selected_open">None selected.  Open PasswdSafe to choose.</string>
    <string name="notes">Notes</string>
    <string name="num_records_label">Number of Records:</string>
    <string name="ok">OK</string>
    <string name="open_file_title">Open File</string>
    <string name="option_not_selected">At least one option must be selected</string>
    <string name="parent_directory">Parent Directory</string>
    <string name="parent_group">Parent Group</string>
    <string name="password">Password</string>
    <string name="password_encoding_label">Password Encoding:</string>
    <string name="password_expiration">Password Expiration</string>
    <string name="password_expiration_in_past">Password expiration is in the past</string>
    <string name="password_expiration_invalid_interval">Password expiration interval must be in the range 1&#8211;3650</string>
    <string name="password_expired">Password expired</string>
    <string name="password_expires_before">Password expires before %1$s</string>
    <string name="password_expires_today">Password expires today</string>
    <string name="password_file">Password file</string>
    <string name="password_generation">Password generation</string>
    <string name="password_gen_prefs_moved">Password generation options have moved.  Open a file and edit the default policy.</string>
    <string name="password_header">PASSWORD</string>
    <string name="password_label">Password:</string>
    <string name="password_len_short_opt">Password length too short for options</string>
    <string name="password_policy">Password Policy</string>
    <string name="password_policies">Password Policies</string>
    <string name="password_record">Password record</string>
    <string name="password_settings">Password Settings</string>
    <string name="password_times_header">PASSWORD TIMES</string>
    <string name="password_with_expiration">Password with expiration date</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="permissions_label">Permissions:</string>
    <string name="policy_header">POLICY</string>
    <string name="press_yubikey">Press YubiKey</string>
    <string name="psafe3_ext">.psafe3</string>
    <string name="record_settings">Record Settings</string>
    <string name="read_only">Read-only</string>
    <string name="regular_expression">Regular expression</string>
    <string name="regular_expression_summary">Use a regular expression to search instead of a sub-string</string>
    <string name="search_settings">Search Settings</string>
    <string name="show_backup_files">Show backup files</string>
    <string name="title">Title</string>
    <string name="toggle_word_wrap">Toggle Word Wrap</string>
    <string name="toggle_monospace">Toggle Monospace</string>
    <string name="url">URL</string>
    <string name="username">User Name</string>
    <string name="yubikey">YubiKey</string>
    <string name="yubikey_disabled">YubiKey disabled. Enable NFC to use.</string>
</resources>