<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (©) 2015 Jeff Harris <jefftharris@gmail.com>
  ~ All rights reserved. Use of the code is allowed under the
  ~ Artistic License 2.0 terms, as specified in the LICENSE file
  ~ distributed with this code, or available from
  ~ http://www.opensource.org/licenses/artistic-license-2.0.php
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_edit"
          android:icon="@drawable/ic_action_edit"
          app:showAsAction="ifRoom"
          android:title="@string/edit"/>

    <item android:id="@+id/menu_delete"
          android:icon="@drawable/ic_action_delete"
          app:showAsAction="ifRoom"
          android:title="@string/delete"/>

    <item android:id="@+id/menu_copy_notes"
          android:title="@string/copy_notes"/>

    <item android:id="@+id/menu_toggle_monospace"
          android:title="@string/toggle_monospace"/>

    <item android:id="@+id/menu_toggle_word_wrap"
          android:title="@string/toggle_word_wrap"/>

</menu>
