<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:horizontalGap="0px"
    android:keyWidth="40%p"
    android:verticalGap="0px">

    <Row android:keyHeight="50dp">
        <Key
            android:codes="-1"
            android:keyEdgeFlags="left"
            android:keyLabel="@string/username"/>
        <Key
            android:codes="-2"
            android:keyLabel="@string/url"/>
        <Key
            android:codes="-3"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/sym_keyboard_delete"
            android:keyWidth="20%p"/>
    </Row>
    <Row android:keyHeight="50dp">
        <Key
            android:codes="-11"
            android:keyEdgeFlags="left"
            android:keyLabel="@string/password"/>
        <Key
            android:codes="-12"
            android:keyLabel="@string/email"/>
        <Key
            android:codes="-13"
            android:keyEdgeFlags="right"
            android:keyLabel="Enter"
            android:keyWidth="20%p"/>
    </Row>
    <Row>
        <Key
            android:codes="-21"
            android:keyEdgeFlags="left"
            android:keyLabel="@string/title"/>
        <Key
            android:codes="-22"
            android:keyLabel="@string/notes"/>
        <Key
            android:codes="32"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/sym_keyboard_space"
            android:keyWidth="10%p"/>

        <Key
            android:codes="-24"
            android:keyIcon="@drawable/ic_action_passwdsafe"
            android:keyWidth="10%p"/>
    </Row>

</Keyboard>
