<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10sp">

    <TextView
        android:id="@+id/file"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/passwd_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium">

        <requestFocus/>
    </EditText>

    <CheckBox
        android:id="@+id/read_only"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_only"/>

    <LinearLayout
        android:id="@+id/yubi_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/yubi_disabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yubikey_disabled"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
            
        <LinearLayout
            android:id="@+id/yubi_start_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yubi_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/yubikey"
                android:drawablePadding="6dp"
                android:text="@string/yubikey"/>
    
            <Spinner
                android:id="@+id/yubi_slot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@+array/yubikey_slots"
                tools:listitem="@android:layout/simple_spinner_dropdown_item"/>
    
        </LinearLayout>

        <LinearLayout
            android:id="@+id/yubi_progress_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/yubi_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/press_yubikey"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            
            <ProgressBar
                android:id="@+id/yubi_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"/>
            
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
